changing signin button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <p id="passerrorMsg" class="errorMsg"></p>
             <div class="inputBx">
-                <input type="submit" value="Sign up" id="submit"/>
+                <input type="submit" value="Login" id="submit"/>
             </div>
             <div class="group">
                 <a href="#">Forget Password</a>
